My account oldalon apróbb, nagyobb fixálások. z-index,top,margin állítása

--- a/CSS/myaccount.css
+++ b/CSS/myaccount.css
@@ -192,7 +192,7 @@ img.edit-icon{
   display: none;
   cursor: pointer;
   position: absolute;
-  top: 104px;
+  top: 6.2em;
   z-index: 9;
   right: 0;
   background-color: #f7f7f7;;
