--- a/CSS/transactions.css
+++ b/CSS/transactions.css
@@ -1,12 +1,11 @@
 .right {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
 }
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 130vh;
     margin: 0;
 }
 
